--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^5.3.2",
     "bootstrap": "twbs/bootstrap#v4-dev",
     "connect": "^3.4.0",
+    "connect-logger": "0.0.1",
     "css-loader": "^0.16.0",
     "envify": "^3.4.0",
     "eval": "^0.1.1",
