--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "envify": "^3.4.0",
     "eval": "^0.1.1",
     "extract-text-webpack-plugin": "^0.8.2",
-    "flux": "^2.1.1",
     "html-webpack-plugin": "^1.6.1",
     "lodash": "^3.10.1",
     "node-sass": "^3.2.0",
@@ -32,6 +31,7 @@
     "postcss-loader": "^0.6.0",
     "proxy-middleware": "^0.13.1",
     "react": "^0.13.3",
+    "redux": "^1.0.1",
     "sass-loader": "^2.0.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.12.3",
