--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-loader": "^0.6.0",
     "proxy-middleware": "^0.13.1",
     "react": "^0.13.3",
+    "react-router": "^1.0.0-beta3",
     "redux": "^1.0.1",
     "sass-loader": "^2.0.1",
     "source-map-loader": "^0.1.5",
