--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "envify": "^3.4.0",
     "eval": "^0.1.1",
     "extract-text-webpack-plugin": "^0.8.2",
+    "history": "^1.8.4",
     "html-webpack-plugin": "^1.6.1",
     "lodash": "^3.10.1",
     "node-sass": "^3.2.0",
