--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
-    "bootstrap": "twbs/bootstrap#v4-dev",
+    "basscss": "^7.0.4",
     "connect": "^3.4.0",
     "connect-logger": "0.0.1",
     "css-loader": "^0.16.0",
@@ -28,17 +28,20 @@
     "html-webpack-plugin": "^1.6.1",
     "lodash": "^3.10.1",
     "node-sass": "^3.2.0",
+    "postcss": "^5.0.4",
     "postcss-color-rebeccapurple": "^1.2.0",
+    "postcss-custom-media": "^5.0.0",
+    "postcss-custom-properties": "^5.0.0",
     "postcss-loader": "^0.6.0",
     "proxy-middleware": "^0.13.1",
     "react": "^0.13.3",
     "react-router": "^1.0.0-beta3",
     "redux": "^1.0.1",
-    "sass-loader": "^2.0.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.12.3",
     "transform-loader": "^0.2.2",
     "webpack": "^1.11.0",
+    "webpack-core": "^0.6.6",
     "webpack-dev-middleware": "^1.2.0"
   }
 }
