--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
+    "autoprefixer": "^6.0.2",
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "basscss": "^7.0.4",
+    "colors.css": "^2.3.0",
     "connect": "^3.4.0",
     "connect-logger": "0.0.1",
     "css-loader": "^0.16.0",
@@ -29,7 +30,7 @@
     "lodash": "^3.10.1",
     "node-sass": "^3.2.0",
     "postcss": "^5.0.4",
-    "postcss-color-rebeccapurple": "^1.2.0",
+    "postcss-color-function": "^2.0.0",
     "postcss-custom-media": "^5.0.0",
     "postcss-custom-properties": "^5.0.0",
     "postcss-loader": "^0.6.0",
